chore: improve sidebar ux and readability, switch nav to Hugo auto resolved tree

--- a/docs/assets/scss/_sidebar.scss
+++ b/docs/assets/scss/_sidebar.scss
@@ -31,7 +31,7 @@
     position: fixed;
     display: flex;
     width: 300px;
-    left: -1rem;
+    left: 0;
     top: var(--navbar-height);
   }
 
